--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Salesforce solutions without limits</strong>
+              <strong>Solutions for Salesforce without limits</strong>
             </h1>
             <hr>
           </div>
